--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,6 +108,11 @@
   margin-left: 0.5rem;
 }
 
+.icon {
+  font-size: 10rem;
+  cursor: pointer;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
